--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,5 +1,9 @@
 @import "mdl.css";
 
+body {
+	background-color: #eee;
+}
+
 .mdl-layout__container {
 	top: 0;
 }
@@ -12,4 +16,86 @@
 .mdl-chip__error {
 	background-color: lightcoral;
 	border-radius: 0;
+}
+
+.welcome-card {
+	width: 100%;
+	background-color: #37474f;
+	color: white;
+}
+
+.stream-title {
+	vertical-align: top;
+	padding: 5px;
+	color: white;
+	background-color: black;
+}
+
+.stream-tile {
+	cursor: pointer;
+}
+
+.chat-container {
+	height: 400px;
+	padding: 1em;
+}
+
+.video-container {
+	height: 400px;
+	text-align: center;
+}
+
+.youtube-embed {
+	width:100%;
+	height:100%;
+}
+
+.chat-container {
+	overflow-y: scroll;
+}
+
+.comment-bubble {
+	margin-bottom: 15px;
+}
+
+.tools-container {
+	height: 100%;
+	padding: 1em;
+	align-items: center;
+}
+
+.tools-info {
+	background-color: lightblue;
+	width: 500px;
+	text-align: center;
+}
+
+.info-text {
+	color: white;
+	font-size: 16px;
+}
+
+.back-button {
+	width: 200px;
+}
+
+.commenter {
+	color: blue;
+	font-weight: bold;
+	padding: 0.5em;
+	cursor: pointer;
+}
+
+.welcome-message {
+	text-align: center;
+}
+
+.subheader {
+	text-align: center;
+	font-size: 1.5em;
+	color: #32c3a2;
+}
+
+.landing-url {
+	color: white;
 }
