change javascript filename

--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -57,6 +57,6 @@
     </div>
   </main>
 </div>
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/bundle.js") %>"></script>
   </body>
 </html>
